--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ oldFiles/*
 deprecated/
 webPage/app.py
 
+
 *.cap
 *.pcap
 *.json
@@ -138,3 +139,4 @@ $RECYCLE.BIN/
 
 
 # End of https://www.gitignore.io/api/pycharm,windows,macos
+!webPage/testFiles/*
