--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pypcapkit = "*"
+pypcapkit = ">=0.9.8rc1"
 tensorflow = "*"
 requests = "*"
 scapy = "*"
@@ -15,3 +15,6 @@ chardet = "*"
 
 [requires]
 python_version = "3.6"
+
+[pipenv]
+allow_prereleases = true
